Fix server in generated URLs